docs/api/qiskit/0.19/qiskit.providers.models.BackendProperties.mdx
---
title: BackendProperties (v0.19)
description: API reference for qiskit.providers.models.BackendProperties in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.models.BackendProperties
---

# BackendProperties

<Class id="qiskit.providers.models.BackendProperties" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/providers/models/backendproperties.py" signature="BackendProperties(backend_name, backend_version, last_update_date, qubits, gates, general, **kwargs)" modifiers="class">
  Class representing backend properties

  This holds backend properties measured by the provider. All properties which are provided optionally. These properties may describe qubits, gates, or other general propeties of the backend.

  Initialize a BackendProperties instance.

  **Parameters**

  *   **backend\_name** (*str*) – Backend name.
  *   **backend\_version** (*str*) – Backend version in the form X.Y.Z.
  *   **last\_update\_date** (*datetime or str*) – Last date/time that a property was updated. If specified as a `str`, it must be in ISO format.
  *   **qubits** (*list*) – System qubit parameters as a list of lists of `Nduv` objects
  *   **gates** (*list*) – System gate parameters as a list of `Gate` objects
  *   **general** (*list*) – General parameters as a list of `Nduv` objects
  *   **kwargs** – optional additional fields

  ## Methods

  <span id="backendproperties-frequency" />

  ### frequency

  <Function id="qiskit.providers.models.BackendProperties.frequency" signature="BackendProperties.frequency(qubit)">
    Return the frequency of the given qubit.

    **Parameters**

    **qubit** (`int`) – Qubit for which to return frequency of.

    **Return type**

    `float`

    **Returns**

    Frequency of the given qubit.
  </Function>

  <span id="backendproperties-from-dict" />

  ### from\_dict

  <Function id="qiskit.providers.models.BackendProperties.from_dict" signature="BackendProperties.from_dict(data)" modifiers="classmethod">
    Create a new Gate object from a dictionary.

    **Parameters**

    **data** (*dict*) – A dictionary representing the Gate to create. It will be in the same format as output by [`to_dict()`](qiskit.providers.models.BackendProperties#to_dict "qiskit.providers.models.BackendProperties.to_dict").

    **Returns**

    **The BackendProperties from the input**

    dictionary.

    **Return type**

    [BackendProperties](qiskit.providers.models.BackendProperties "qiskit.providers.models.BackendProperties")
  </Function>

  <span id="backendproperties-gate-error" />

  ### gate\_error

  <Function id="qiskit.providers.models.BackendProperties.gate_error" signature="BackendProperties.gate_error(gate, qubits)">
    Return gate error estimates from backend properties.

    **Parameters**

    *   **gate** (`str`) – The gate for which to get the error.
    *   **qubits** (`Union`\[`int`, `Iterable`\[`int`]]) – The specific qubits for the gate.

    **Return type**

    `float`

    **Returns**

    Gate error of the given gate and qubit(s).
  </Function>

  <span id="backendproperties-gate-length" />

  ### gate\_length

  <Function id="qiskit.providers.models.BackendProperties.gate_length" signature="BackendProperties.gate_length(gate, qubits)">
    Return the duration of the gate in units of seconds.

    **Parameters**

    *   **gate** (`str`) – The gate for which to get the duration.
    *   **qubits** (`Union`\[`int`, `Iterable`\[`int`]]) – The specific qubits for the gate.

    **Return type**

    `float`

    **Returns**

    Gate length of the given gate and qubit(s).
  </Function>

  <span id="backendproperties-gate-property" />

  ### gate\_property

  <Function id="qiskit.providers.models.BackendProperties.gate_property" signature="BackendProperties.gate_property(gate, qubits=None, name=None)">
    Return the property of the given gate.

    **Parameters**

    *   **gate** (`str`) – Name of the gate.
    *   **qubits** (`Union`\[`int`, `Iterable`\[`int`], `None`]) – The qubit to find the property for.
    *   **name** (`Optional`\[`str`]) – Optionally used to specify which gate property to return.

    **Return type**

    `Tuple`\[`Any`, `datetime`]

    **Returns**

    Gate property as a tuple of the value and the time it was measured.

    **Raises**

    [**BackendPropertyError**](qiskit.providers.BackendPropertyError "qiskit.providers.BackendPropertyError") – If the property is not found or name is specified but qubit is not.
  </Function>

  <span id="backendproperties-qubit-property" />

  ### qubit\_property

  <Function id="qiskit.providers.models.BackendProperties.qubit_property" signature="BackendProperties.qubit_property(qubit, name=None)">
    Return the property of the given qubit.

    **Parameters**

    *   **qubit** (`int`) – The property to look for.
    *   **name** (`Optional`\[`str`]) – Optionally used to specify within the hierarchy which property to return.

    **Return type**

    `Tuple`\[`Any`, `datetime`]

    **Returns**

    Qubit property as a tuple of the value and the time it was measured.

    **Raises**

    [**BackendPropertyError**](qiskit.providers.BackendPropertyError "qiskit.providers.BackendPropertyError") – If the property is not found.
  </Function>

  <span id="backendproperties-readout-error" />

  ### readout\_error

  <Function id="qiskit.providers.models.BackendProperties.readout_error" signature="BackendProperties.readout_error(qubit)">
    Return the readout error of the given qubit.

    **Parameters**

    **qubit** (`int`) – Qubit for which to return the readout error of.

    **Return type**

    `float`

    **Returns**

    Readout error of the given qubit,
  </Function>

  <span id="backendproperties-t1" />

  ### t1

  <Function id="qiskit.providers.models.BackendProperties.t1" signature="BackendProperties.t1(qubit)">
    Return the T1 time of the given qubit.

    **Parameters**

    **qubit** (`int`) – Qubit for which to return the T1 time of.

    **Return type**

    `float`

    **Returns**

    T1 time of the given qubit.
  </Function>

  <span id="backendproperties-t2" />

  ### t2

  <Function id="qiskit.providers.models.BackendProperties.t2" signature="BackendProperties.t2(qubit)">
    Return the T2 time of the given qubit.

    **Parameters**

    **qubit** (`int`) – Qubit for which to return the T2 time of.

    **Return type**

    `float`

    **Returns**

    T2 time of the given qubit.
  </Function>

  <span id="backendproperties-to-dict" />

  ### to\_dict

  <Function id="qiskit.providers.models.BackendProperties.to_dict" signature="BackendProperties.to_dict()">
    Return a dictionary format representation of the BackendProperties.

    **Returns**

    The dictionary form of the BackendProperties.

    **Return type**

    dict
  </Function>
</Class>

